Seperated video player into its own stylesheet and solved z-index issue.

--- a/src/styles/footer.sass
+++ b/src/styles/footer.sass
@@ -3,6 +3,7 @@ footer
   bottom: 0
   left: 0
   width: 100%
+  z-index: $z-footer
   padding: 0 0 0 4rem
   display: flex
   align-items: center
