--- a/src/styles/projectGlobals.sass
+++ b/src/styles/projectGlobals.sass
@@ -1,4 +1,8 @@
 
+// z-indexes
+$z-footer: 100
+
+
 body
   color: $d2
   background-color: $l1
